cart & header fix

--- a/app/index.html
+++ b/app/index.html
@@ -53,47 +53,51 @@
         <div class="cart">
           <p class="cart-head">У вас в корзине 2 товара<br> на сумму 12 000р.</p>
           <div class="cart-body">
-            <ul class="cart-list">
-              <li class="cart-item clearfix">
-                <i class="icon icon-cart-close"></i>
-                <div class="cart-img-wrap">
-                  <img src="images/cart-photo.jpg" alt="">                 
-                </div>
-                  <div class="cart-text-wrap">
-                    <p class="cart-name">Постельное белье "Two"</p>
-                    <div class="cart-price-block clearfix">
-                      <p class="cart-price"> 7 500 р.</p>
-                      <p class="delete-link">Удалить</p>
+            <div class="scrollbar style-3">
+              <div class="force-overflow">
+                <ul class="cart-list">
+                  <li class="cart-item clearfix">
+                    <i class="icon icon-cart-close"></i>
+                    <div class="cart-img-wrap">
+                      <img src="images/cart-photo.jpg" alt="">                 
                     </div>
-                  </div>
-              </li>
-              <li class="cart-item clearfix">
-                <i class="icon icon-cart-close"></i>
-                <div class="cart-img-wrap">
-                  <img src="images/cart-photo.jpg" alt="">                 
-                </div>
-                  <div class="cart-text-wrap">
-                    <p class="cart-name">Постельное белье "Two-Two"</p>
-                    <div class="cart-price-block clearfix">
-                      <p class="cart-price"> 17 500 р.</p>
-                      <p class="delete-link">Удалить</p>
+                      <div class="cart-text-wrap">
+                        <p class="cart-name">Постельное белье "Two"</p>
+                        <div class="cart-price-block clearfix">
+                          <p class="cart-price"> 7 500 р.</p>
+                          <p class="delete-link">Удалить</p>
+                        </div>
+                      </div>
+                  </li>
+                  <li class="cart-item clearfix">
+                    <i class="icon icon-cart-close"></i>
+                    <div class="cart-img-wrap">
+                      <img src="images/cart-photo.jpg" alt="">                 
                     </div>
-                  </div>
-              </li>
-              <li class="cart-item clearfix">
-                <i class="icon icon-cart-close"></i>
-                <div class="cart-img-wrap">
-                  <img src="images/cart-photo.jpg" alt="">                 
-                </div>
-                  <div class="cart-text-wrap">
-                    <p class="cart-name">Постельное белье "Two-Two"</p>
-                    <div class="cart-price-block clearfix">
-                      <p class="cart-price"> 17 500 р.</p>
-                      <p class="delete-link">Удалить</p>
+                      <div class="cart-text-wrap">
+                        <p class="cart-name">Постельное белье "Two-Two"</p>
+                        <div class="cart-price-block clearfix">
+                          <p class="cart-price"> 17 500 р.</p>
+                          <p class="delete-link">Удалить</p>
+                        </div>
+                      </div>
+                  </li>
+                  <li class="cart-item clearfix">
+                    <i class="icon icon-cart-close"></i>
+                    <div class="cart-img-wrap">
+                      <img src="images/cart-photo.jpg" alt="">                 
                     </div>
-                  </div>
-              </li>
-            </ul>
+                      <div class="cart-text-wrap">
+                        <p class="cart-name">Постельное белье "Two-Two"</p>
+                        <div class="cart-price-block clearfix">
+                          <p class="cart-price"> 17 500 р.</p>
+                          <p class="delete-link">Удалить</p>
+                        </div>
+                      </div>
+                  </li>
+                </ul>
+              </div>
+            </div>    
           </div>
           <div class="cart-footer">
             <a href="" class="cart-button">Перейти в корзину</a>
@@ -230,18 +234,32 @@
                 </div>  
                 <div class="feedback-right-block">
                   <p class="user-name">Имя Фамилия</p>
-                  <p class="feedback-text">
-                    Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit. Praesent vel consequat mi.
-                    Donec gravida lectus justo, at tempor
-                    lectus ultrices non. Vivamus at dolor
-                    congue, auctor tellus at, faucibus dolor.
-                    Nunc vehicula gravida quam, et blandit
-                    odio egestas pulvinar. Fusce vel velit purus.
-                    Nulla eu venenatis dolor, ut placerat est.
-                  </p>
-                </div>                
-              </div>
+                  <div class="feedback-text-wrap">                   
+                      <div class="scrollbar style-3">
+                        <div class="force-overflow">
+                           <p class="feedback-text">                  
+                            Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Praesent vel consequat mi.
+                            Donec gravida lectus justo, at tempor
+                            lectus ultrices non. Vivamus at dolor
+                            congue, auctor tellus at, faucibus dolor.
+                            Nunc vehicula gravida quam, et blandit
+                            odio egestas pulvinar. Fusce vel velit purus.
+                            Nulla eu venenatis dolor, ut placerat est.
+                            Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Praesent vel consequat mi.
+                            Donec gravida lectus justo, at tempor
+                            lectus ultrices non. Vivamus at dolor
+                            congue, auctor tellus at, faucibus dolor.
+                            Nunc vehicula gravida quam, et blandit
+                            odio egestas pulvinar. Fusce vel velit purus.
+                            Nulla eu venenatis dolor, ut placerat est.
+                          </p>
+                        </div>                      
+                      </div>                   
+                  </div>
+                </div>
+              </div>             
               <div class="feedback-item">
                 <div class="feedback-left-block">
                   <div class="img-wrap">
@@ -252,16 +270,21 @@
                 </div>  
                 <div class="feedback-right-block">
                   <p class="user-name">Имя Фамилия</p>
-                  <p class="feedback-text">
-                    Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit. Praesent vel consequat mi.
-                    Donec gravida lectus justo, at tempor
-                    lectus ultrices non. Vivamus at dolor
-                    congue, auctor tellus at, faucibus dolor.
-                    Nunc vehicula gravida quam, et blandit
-                    odio egestas pulvinar. Fusce vel velit purus.
-                    Nulla eu venenatis dolor, ut placerat est.
-                  </p>
+                  <div class="feedback-text-wrap">                   
+                      <div class="scrollbar style-3">
+                        <div class="force-overflow">
+                           <p class="feedback-text">                  
+                            Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Praesent vel consequat mi.
+                            Donec gravida lectus justo, at tempor
+                            lectus ultrices non. Vivamus at dolor
+                            congue, auctor tellus at, faucibus dolor.
+                            Nunc vehicula gravida quam, et blandit
+                            odio egestas pulvinar. 
+                          </p>
+                        </div>                      
+                      </div>                   
+                  </div>
                 </div>
               </div>
               <div class="feedback-item">
@@ -274,12 +297,30 @@
                 </div>  
                 <div class="feedback-right-block">
                   <p class="user-name">Имя Фамилия</p>
-                  <p class="feedback-text">
-                    Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit. Praesent vel consequat mi.
-                    Donec gravida lectus justo, at tempor
-                    lectus ultrices non. 
-                  </p>
+                   <div class="feedback-text-wrap">                   
+                      <div class="scrollbar style-3">
+                        <div class="force-overflow">
+                           <p class="feedback-text">                  
+                            Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Praesent vel consequat mi.
+                            Donec gravida lectus justo, at tempor
+                            lectus ultrices non. Vivamus at dolor
+                            congue, auctor tellus at, faucibus dolor.
+                            Nunc vehicula gravida quam, et blandit
+                            odio egestas pulvinar. Fusce vel velit purus.
+                            Nulla eu venenatis dolor, ut placerat est.
+                            Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Praesent vel consequat mi.
+                            Donec gravida lectus justo, at tempor
+                            lectus ultrices non. Vivamus at dolor
+                            congue, auctor tellus at, faucibus dolor.
+                            Nunc vehicula gravida quam, et blandit
+                            odio egestas pulvinar. Fusce vel velit purus.
+                            Nulla eu venenatis dolor, ut placerat est.
+                          </p>
+                        </div>                      
+                      </div>                   
+                  </div>
                 </div>                
               </div>
               <div class="feedback-item">
@@ -292,16 +333,30 @@
                 </div>  
                 <div class="feedback-right-block">
                   <p class="user-name">Имя Фамилия</p>
-                  <p class="feedback-text">
-                    Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit. Praesent vel consequat mi.
-                    Donec gravida lectus justo, at tempor
-                    lectus ultrices non. Vivamus at dolor
-                    congue, auctor tellus at, faucibus dolor.
-                    Nunc vehicula gravida quam, et blandit
-                    odio egestas pulvinar. Fusce vel velit purus.
-                    Nulla eu venenatis dolor, ut placerat est.
-                  </p>
+                   <div class="feedback-text-wrap">                   
+                      <div class="scrollbar style-3">
+                        <div class="force-overflow">
+                           <p class="feedback-text">                  
+                            Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Praesent vel consequat mi.
+                            Donec gravida lectus justo, at tempor
+                            lectus ultrices non. Vivamus at dolor
+                            congue, auctor tellus at, faucibus dolor.
+                            Nunc vehicula gravida quam, et blandit
+                            odio egestas pulvinar. Fusce vel velit purus.
+                            Nulla eu venenatis dolor, ut placerat est.
+                            Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Praesent vel consequat mi.
+                            Donec gravida lectus justo, at tempor
+                            lectus ultrices non. Vivamus at dolor
+                            congue, auctor tellus at, faucibus dolor.
+                            Nunc vehicula gravida quam, et blandit
+                            odio egestas pulvinar. Fusce vel velit purus.
+                            Nulla eu venenatis dolor, ut placerat est.
+                          </p>
+                        </div>                      
+                      </div>                   
+                  </div>
                 </div>
               </div>
             </div>
