--- a/app/product.html
+++ b/app/product.html
@@ -140,7 +140,7 @@
             <li><a href="">Постельное белье</a></li>
           </ul>       
           <div class="left-column">
-            <div class="slider-wrap">
+            <div class="product-slider-wrap">
               <div class="product-slider-for">
                 <div class="img-wrap">
                   <img src="images/prod-1.jpg" alt="">                  
@@ -150,6 +150,12 @@
                 </div>
                 <div class="img-wrap">
                   <img src="images/prod-3.jpg" alt="">                  
+                </div>
+                <div class="img-wrap">
+                  <img src="images/prod-1.jpg" alt="">                  
+                </div>
+                <div class="img-wrap">
+                  <img src="images/prod-2.jpg" alt="">                  
                 </div>
               </div>
               <div class="product-slider-nav">
@@ -161,6 +167,12 @@
                 </div>
                 <div class="img-wrap">
                   <img src="images/prod-3.jpg" alt="">                  
+                </div>
+                 <div class="img-wrap">
+                  <img src="images/prod-1.jpg" alt="">                  
+                </div>
+                 <div class="img-wrap">
+                  <img src="images/prod-2.jpg" alt="">                  
                 </div>
               </div>
             </div>
@@ -228,12 +240,21 @@
             <div class="description-tab-block clearfix">
               <dl class="responsive-tabs clearfix">
                 <dt>Описание</dt>
-                  <dd>                      
-                      <p>Односпальное постельное белье из тонкого хлопка с набивным леопардовым рисунком.Пододеяльник застегивается снизу на потайные металлические кнопки. Одна наволочка. Толщина нити 30. Плотность переплетения 144.</p>
+                  <dd> 
+                    <div class="scrollbar style-3">
+                      <div class="force-overflow">                     
+                        <p>Односпальное постельное белье из тонкого хлопка с набивным леопардовым рисунком.Пододеяльник застегивается снизу на потайные металлические кнопки. Одна наволочка. Толщина нити 30. Плотность переплетения 144.
+                       </p>
+                      </div>
+                    </div>    
                   </dd>
                 <dt>Уход</dt>
-                  <dd>                      
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel odio non elit tincidunt placerat. Donec quis dolor eleifend, venenatis urna nec, feugiat purus. Morbi dapibus leo lorem, vel tempor quam euismod ac. Pellentesque elementum ac ante ut gravida.</p>
+                  <dd> 
+                    <div class="scrollbar style-3">
+                      <div class="force-overflow">                                   
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel odio non elit tincidunt placerat. Donec quis dolor eleifend, venenatis urna nec, feugiat purus. Morbi dapibus leo lorem, vel tempor quam euismod ac. Pellentesque elementum ac ante ut gravida.</p>
+                      </div>
+                    </div> 
                   </dd>
                 </dl>
               </div>
