--- a/app/about.html
+++ b/app/about.html
@@ -139,16 +139,13 @@
       </div>
       <div class="head-slider">
         <div class="head-slider-item">
-          <img class="slider-big-img" src="images/img-1.jpg" alt="">
-          <img class="slider-min-img" src="images/img-1-min.jpg" alt="">
+          <img class="slider-big-img" src="images/img-1.jpg" alt="">          
         </div>
         <div class="head-slider-item">
-          <img class="slider-big-img" src="images/img-2.jpg" alt="">
-          <img class="slider-min-img" src="images/img-2-min.jpg" alt="">
+          <img class="slider-big-img" src="images/img-2.jpg" alt="">          
         </div>
         <div class="head-slider-item">
-          <img class="slider-big-img" src="images/img-2.jpg" alt="">
-          <img class="slider-min-img" src="images/img-2-min.jpg" alt="">
+          <img class="slider-big-img" src="images/img-2.jpg" alt="">          
         </div>
       </div>
     </section>
@@ -259,50 +256,56 @@
       <div class="container">
         <div class="row">
          <h1 class="content-title">Мы в прессе</h1>
-          <ul class="press-list">
+          <ul class="press-list">          
             <li class="press-item">
-              <div class="img-wrap">
-                <img src="http://placehold.it/260x200" alt="">
-              </div>
-              <div class="press-text-block">
-                <p class="news-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fringilla
-                  ultricies libero. Aenean sed egestas elit. Mauris eu ipsum arcu. Phasellus
-                  sem nunc, auctor lacinia tellus in, iaculis vestibulum ante. Integer tempor
-                  massa quis tempor pharetra, massa metus laoreet ligula, non eleifend
-                  lorem massa non orci. Nulla bibendum dui risus, eu consequat augue
-                  elementum nec. Sed at auctor <span>...</span><a href="" class="all-news-link">Читать далее</a>
-                </p>
+              <div class="press-item-wrap">
+                <div class="img-wrap">
+                  <img src="http://placehold.it/260x200" alt="">
+                </div>
+                <div class="press-text-block">
+                  <p class="news-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fringilla
+                    ultricies libero. Aenean sed egestas elit. Mauris eu ipsum arcu. Phasellus
+                    sem nunc, auctor lacinia tellus in, iaculis vestibulum ante. Integer tempor
+                    massa quis tempor pharetra, massa metus laoreet ligula, non eleifend
+                    lorem massa non orci. Nulla bibendum dui risus, eu consequat augue
+                    elementum nec. Sed at auctor <span>...</span><a href="" class="all-news-link">Читать далее</a>
+                  </p>
+                </div>
               </div>
             </li>
             <li class="press-item">
-              <div class="img-wrap">
-                <img src="http://placehold.it/260x200" alt="">
-              </div>
-              <div class="press-text-block">
-                <p class="news-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fringilla
-                  ultricies libero. Aenean sed egestas elit. Mauris eu ipsum arcu. Phasellus
-                  sem nunc, auctor lacinia tellus in, iaculis vestibulum ante. Integer tempor
-                  massa quis tempor pharetra, massa metus laoreet ligula, non eleifend
-                  lorem massa non orci. Nulla bibendum dui risus, eu consequat augue
-                  elementum nec. Sed at auctor <span>...</span><a href="" class="all-news-link">Читать далее</a>
-                </p>
+             <div class="press-item-wrap">
+                <div class="img-wrap">
+                  <img src="http://placehold.it/260x200" alt="">
+                </div>
+                <div class="press-text-block">
+                  <p class="news-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fringilla
+                    ultricies libero. Aenean sed egestas elit. Mauris eu ipsum arcu. Phasellus
+                    sem nunc, auctor lacinia tellus in, iaculis vestibulum ante. Integer tempor
+                    massa quis tempor pharetra, massa metus laoreet ligula, non eleifend
+                    lorem massa non orci. Nulla bibendum dui risus, eu consequat augue
+                    elementum nec. Sed at auctor <span>...</span><a href="" class="all-news-link">Читать далее</a>
+                  </p>
+                </div>
               </div>
             </li>
             <li class="press-item">
-              <div class="img-wrap">
-                <img src="images/inst-page-1.jpg" alt="">
-              </div>
-              <div class="press-text-block">
-                <p class="news-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fringilla
-                  ultricies libero. Aenean sed egestas elit. Mauris eu ipsum arcu. Phasellus
-                  sem nunc, auctor lacinia tellus in, iaculis vestibulum ante. Integer tempor
-                  massa quis tempor pharetra, massa metus laoreet ligula, non eleifend
-                  lorem massa non orci. Nulla bibendum dui risus, eu consequat augue
-                  elementum nec. Sed at auctor <span>...</span><a href="" class="all-news-link">Читать далее</a>
-                </p>
+             <div class="press-item-wrap">
+                <div class="img-wrap">
+                  <img src="http://placehold.it/260x200" alt="">
+                </div>
+                <div class="press-text-block">
+                  <p class="news-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fringilla
+                    ultricies libero. Aenean sed egestas elit. Mauris eu ipsum arcu. Phasellus
+                    sem nunc, auctor lacinia tellus in, iaculis vestibulum ante. Integer tempor
+                    massa quis tempor pharetra, massa metus laoreet ligula, non eleifend
+                    lorem massa non orci. Nulla bibendum dui risus, eu consequat augue
+                    elementum nec. Sed at auctor <span>...</span><a href="" class="all-news-link">Читать далее</a>
+                  </p>
+                </div>
               </div>
             </li>
           </ul>
