--- a/app/index.html
+++ b/app/index.html
@@ -53,8 +53,8 @@
         <div class="cart">
           <p class="cart-head">У вас в корзине 2 товара<br> на сумму 12 000р.</p>
           <div class="cart-body">
-            <div class="scrollbar style-3">
-              <div class="force-overflow">
+           <p class="cart-head">У вас в корзине 2 товара<br> на сумму 12 000р.</p>
+            
                 <ul class="cart-list">
                   <li class="cart-item clearfix">
                     <i class="icon icon-cart-close"></i>
@@ -95,9 +95,34 @@
                         </div>
                       </div>
                   </li>
+                  <li class="cart-item clearfix">
+                    <i class="icon icon-cart-close"></i>
+                    <div class="cart-img-wrap">
+                      <img src="images/cart-photo.jpg" alt="">                 
+                    </div>
+                      <div class="cart-text-wrap">
+                        <p class="cart-name">Постельное белье "Two-Two"</p>
+                        <div class="cart-price-block clearfix">
+                          <p class="cart-price"> 17 500 р.</p>
+                          <p class="delete-link">Удалить</p>
+                        </div>
+                      </div>
+                  </li>
+                  <li class="cart-item clearfix">
+                    <i class="icon icon-cart-close"></i>
+                    <div class="cart-img-wrap">
+                      <img src="images/cart-photo.jpg" alt="">                 
+                    </div>
+                      <div class="cart-text-wrap">
+                        <p class="cart-name">Постельное белье "Two-Two"</p>
+                        <div class="cart-price-block clearfix">
+                          <p class="cart-price"> 17 500 р.</p>
+                          <p class="delete-link">Удалить</p>
+                        </div>
+                      </div>
+                  </li>
                 </ul>
-              </div>
-            </div>    
+            
           </div>
           <div class="cart-footer">
             <a href="" class="cart-button">Перейти в корзину</a>
