--- a/app/news.html
+++ b/app/news.html
@@ -156,7 +156,7 @@
             <ul class="content-list">
               <li class="content-item">
                 <div class="img-wrap">
-                  <img src="images/img-2-min.jpg" alt="">
+                  <img src="images/img-2.jpg" alt="">
                 </div>
                 <div class="news-text-block">
                   <p class="news-title">Название новости</p>
@@ -166,7 +166,7 @@
               </li>
                <li class="content-item">
                 <div class="img-wrap">
-                  <img src="images/img-1-min.jpg" alt="">
+                  <img src="images/calalog-img.jpg" alt="">
                 </div>
                 <div class="news-text-block">
                   <p class="news-title">Название новости</p>
