--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
           </div>
           <div class="header-center-column col-lg-5 col-md-3 col-sm-3 col-xs-5">
             <a href="" class="logo">
-              <img src="images/logo.png" alt="">
+              <img src="images/logo.svg" alt="">
             </a>
           </div>
           <div class="header-right-column col-lg-3 col-md-4 col-sm-4 col-xs-7">                      
